Uptake Java17 (#605)